little bit UI changes and add placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400");
 body {
-  background: #424B54;
+  background: #212121;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -21,7 +21,7 @@ input {
 
 .tooltip {
   position: relative;
-  background: #ff3466;
+  background: #ff1744;
   padding: 5px 12px;
   margin: 5px;
   font-size: 15px;
@@ -40,14 +40,14 @@ input {
 .tooltip:before {
   border-width: 10px 8px 0 8px;
   border-style: solid;
-  border-color: #ff3466 transparent transparent transparent;
+  border-color: #ff1744 transparent transparent transparent;
   top: -15px;
   transform: translateY(20px);
 }
 
 .tooltip:after {
   content: attr(data-tooltip);
-  background: #ff3466;
+  background: #ff1744;
   width: 160px;
   height: 40px;
   font-size: 13px;
