--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
-$pink: #ff3466;
+$pink: #ff1744;
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400');
 body {
-  background: #424B54;
+  background: #212121;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
